--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
 	"bracketSameLine": false,
 	"arrowParens": "always",
 	"jsxSingleQuote": true,
-	"trailingComma": "none",
+	"trailingComma": "es5",
 	"bracketSpacing": true
 }
