--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-	"semi": true,
+	"semi": false,
 	"singleQuote": true,
 	"useTabs": true,
-	"printWidth": 80,
+	"printWidth": 79,
 	"bracketSameLine": false,
 	"arrowParens": "always",
 	"jsxSingleQuote": true,
