--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "tenzies",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@formkit/auto-animate": "^1.0.0-beta.1",
-    "eslint-config-react": "^1.1.7",
-    "nanoid": "^4.0.0",
-    "react": "^18.2.0",
-    "react-confetti": "^6.1.0",
-    "react-dom": "^18.2.0",
-    "react-timer-hook": "^3.0.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.20.0",
-    "eslint-plugin-react": "^7.30.1",
-    "postcss": "^8.4.14",
-    "prettier": "2.7.1",
-    "tailwindcss": "^3.1.6",
-    "vite": "^3.0.0"
-  }
+	"name": "tenzies",
+	"private": true,
+	"version": "1.0.0",
+	"homepage": "https://ts-oh.github.io/tenzies/",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@formkit/auto-animate": "^1.0.0-beta.1",
+		"eslint-config-react": "^1.1.7",
+		"gh-pages": "^4.0.0",
+		"nanoid": "^4.0.0",
+		"react": "^18.2.0",
+		"react-confetti": "^6.1.0",
+		"react-dom": "^18.2.0",
+		"react-timer-hook": "^3.0.5"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.15",
+		"@types/react-dom": "^18.0.6",
+		"@vitejs/plugin-react": "^2.0.0",
+		"autoprefixer": "^10.4.7",
+		"eslint": "^8.20.0",
+		"eslint-plugin-react": "^7.30.1",
+		"postcss": "^8.4.14",
+		"prettier": "2.7.1",
+		"tailwindcss": "^3.1.6",
+		"vite": "^3.0.0"
+	}
 }
